# markdown-sql

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md
examples/demo/: Cargo.toml
examples/demo/sql/: UserRepository.md
examples/demo/src/: main.rs
markdown-sql/: Cargo.toml
markdown-sql-macros/: Cargo.toml
markdown-sql-macros/src/: lib.rs  parser.rs  safety_checker.rs  typed_params.rs
markdown-sql-macros/tests/: safety_test.rs
markdown-sql-macros/tests/sql/: safe.md  unsafe.md
markdown-sql-macros/tests/ui/: safe_repository.rs  unsafe_repository.rs  unsafe_repository.stderr
markdown-sql/src/: database.rs  error.rs  executor.rs  lib.rs  manager.rs  param_extractor.rs  parser.rs  repository.rs  typed_params.rs
markdown-sql/src/db/: mod.rs  mysql.rs  postgres.rs  sqlite.rs  traits.rs
markdown-sql/tests/: demo_test.rs  feature_test.rs  integration_test.rs  mysql_test.rs  postgres_test.rs
markdown-sql/tests/sql/: FeatureTestRepository.md  InternalTestRepository.md  ManagerTestRepository.md  MySqlTestRepository.md  PgTestRepository.md  UserRepository.md
plan/: 2025-12-21-markdown-sql.md  2025-12-21-transaction-support.md  2026-01-29-datetime-type-support.md
