[workspace]
resolver = "2"
members = [
    "markdown-sql",
    "markdown-sql-macros",
    "examples/demo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VonChange"]
license = "MIT"
repository = "https://github.com/VonChange/markdown-sql"
description = "Markdown SQL - 将 SQL 存储在 Markdown 文件中，支持动态 SQL 和参数绑定"

[workspace.dependencies]
# 模板引擎
minijinja = "2"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio"] }

# 正则表达式
regex = "1"

# 全局缓存
once_cell = "1"

# 错误处理
thiserror = "2"

# 日志
tracing = "0.1"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 日志订阅
tracing-subscriber = "0.3"
