[package]
name = "markdown-sql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Markdown SQL 核心库 - SQL 解析、模板渲染、执行器"

[features]
default = []
# 启用嵌入目录支持（编译时将 SQL 文件嵌入二进制）
embed = ["include_dir"]

[dependencies]
# 模板引擎
minijinja = { workspace = true, features = ["loader"] }

# 数据库
sqlx = { workspace = true }

# 正则表达式
regex = { workspace = true }

# 全局缓存
once_cell = { workspace = true }

# 错误处理
thiserror = { workspace = true }

# 日志
tracing = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 嵌入目录（可选）
include_dir = { version = "0.7", optional = true }

[dev-dependencies]
tokio = { workspace = true }
# SQLite 仅用于测试
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
