[package]
name = "markdown-sql-demo"
version = "0.1.0"
edition = "2021"
description = "markdown-sql 使用示例"

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
markdown-sql = { path = "../../markdown-sql" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
